2012-06-04  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: More refactoring: generic provider & OAuth
	consumer approach. Added LinkedIn support to test this approach.

2012-06-03  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Introduced generic models for storing social
	apps, accounts and tokens in a central and consistent manner,
	making way for adding support for more account providers. Note:
	there is more refactoring to be done -- this first step only
	focuses on the database models.

2012-03-29  Raymond Penners  <raymond.penners@intenct.nl>

	* account: E-mail confirmation mails are now automatically resent
	whenever a user attempts to login with an unverified e-mail
	address (if ACCOUNT_EMAIL_VERIFICATION=True).

2012-03-15  Raymond Penners  <raymond.penners@intenct.nl>

	* account: The render_value parameter of all PasswordInput fields
	used can now be configured via a setting.

2012-03-15  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added support for prefixing the subject of sent emails.

2012-03-14  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added support for a plugging in a custom signup form
	used for additional questions to ask during signup.

2012-02-28  Raymond Penners  <raymond.penners@intenct.nl>

	* account: `is_active` is no longer used to keep users with an
	unverified e-mail address from loging in.

2012-02-22  Raymond Penners  <raymond.penners@intenct.nl>

	* Dropping uniform dependency. Moved uniform templates into
	example project.

2012-01-19  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.3.0 released.

2012-01-06  Raymond Penners  <raymond.penners@intenct.nl>

	* The e-mail authentication backend now attempts to use the
	'username' parameter as an e-mail address. This is needed to
	properly integrate with other apps invoking authenticate.

2011-05-29  Raymond Penners  <raymond.penners@intenct.nl>
