@@ -1,3 +1,8 @@
+2012-06-05  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* socialaccount: Added generic OAuth2 support. Added GitHub
+	support as proof of concept.
+
 2012-06-04  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* socialaccount: More refactoring: generic provider & OAuth
